# streamify

./: .env.txt  .gitignore  .release-notes.v1.1.0.md  SETUP.md  SETUP.txt  auto-push.sh  build.gradle.kts  gradle.properties  secrets.properties.example  settings.gradle.kts  signing.properties.example  ui-preview.html
admin/: build.gradle.kts  proguard-rules.pro
admin/src/main/: AndroidManifest.xml
admin/src/main/res/drawable/: bg_admin_card.xml
admin/src/main/res/layout/: activity_dashboard.xml  activity_login.xml
admin/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/: build.gradle.kts  google-services.json  proguard-cjk-dictionary.txt  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_security.cpp
app/src/main/res/anim/: card_pulse.xml  heart_pulse.xml  item_fall_in.xml  layout_anim_fall_down.xml  live_pulse.xml
app/src/main/res/drawable/: bg_ad_banner.xml  bg_banner_placeholder.xml  bg_category_badge.xml  bg_category_badge_selected.xml  bg_drawer_exit.xml  bg_drawer_header.xml  ic_paste.xml  (+34 more)
backend/: .env.example  .env.test  .env.test2  .gitignore  README.md  package-lock.json  package.json
backend/admin/: index.html
backend/prisma/: schema.prisma  supabase_migration.sql
backend/scripts/: connectivity-check.js
backend/src/: server.js
backend/src/config/: database.js
backend/src/controllers/: adminUsersController.js  analyticsController.js  bannersController.js  categoriesController.js  channelsController.js  configController.js  devicesController.js  eventsController.js  highlightsController.js  notificationsController.js  playlistsController.js
backend/src/middleware/: auth.js  rateLimit.js  rbac.js  upload.js  validate.js
backend/src/routes/: adminUsers.js  analytics.js  auth.js  banners.js  categories.js  channels.js  config.js  devices.js  events.js  health.js  highlights.js  live.js  notifications.js  playlists.js  upload.js
backend/src/services/: fcm.js  scheduler.js
backend/tools/: check_db_pg.js  regen-pins.sh  verify-apis.js  verify-tls.js
gradle/: libs.versions.toml
tools/: import_m3u.js
(+198 files in other folders)
